Added latest pending cops

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,8 @@ Style/StringLiterals:
   EnforcedStyle: double_quotes
 # These cops are currently pending and will be enabled by default at some point, but adding for now to stop Rubocop
 # complaining...
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
 Lint/RaiseException:
@@ -30,4 +32,6 @@ Style/HashEachMethods:
 Style/HashTransformKeys:
   Enabled: true
 Style/HashTransformValues:
+  Enabled: true
+Style/SlicingWithRange:
   Enabled: true
