--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
+sudo: false
+cache: bundler
 language: ruby
+before_install: gem update --remote bundler
+install: bundle install --retry=3
+script:
+  - bundle exec rake test
+  - bundle exec rubocop
