--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-/.bundle/
-/.yardoc
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
-/.byebug_history
+.bundle/
+.vscode/
+_yardoc/
+coverage/
+doc/
+pkg/
+tmp/
+
+.byebug_history
+.yardoc
