--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
   test:
     strategy:
       matrix:
-        ruby: [2.7, "3.0", 3.1, 3.2]
+        ruby: ["3.0", 3.1, 3.2, 3.3]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
